Modified classes, still need to separate into different classes